--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,12 +8,11 @@
 }
 
 window#waybar {
-    background: rgba(21, 18, 27, 0);
     color: #cdd6f4;
-    padding:10px;
+    padding: 10px;
     border: 1px solid rgba(255,255,255,0.2);
     /*margin: 10px;*/ /*superseeded by config*/
-    background: #1e1e2e;
+    background: rgba(30,30,46, 0.5);
     border-radius: 10px;
 }
 
